Okteta gui: fix zoom scaling breaking on setting a font with different size

BUG: 498926
FIXED-IN: 0.26.19